# 2025-pyday-multiagents-pydantic-ai

./: .env.example  LICENSE  README.md  pyproject.toml
arxiv_author_affiliation/: cli.py  extractor_agent.py  orchestrator.py  pdf_downloader.py  resolver_agent.py
arxiv_author_affiliation/data_models/: __init__.py  affiliation.py  arxiv_paper.py  author.py  extracted_paper.py  normalized_affiliation.py  paper_authors.py  resolver_output.py  validated_paper.py
tests/: test_arxiv_paper.py  test_author_affiliation_models.py  test_cli.py  test_extracted_paper.py  test_extractor_agent.py  test_orchestrator.py  test_pdf_downloader.py  test_resolver_agent.py  test_resolver_models.py
