[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alberto Camara", email = "camara@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
python-template = "python_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
