[project]
name = "arxiv-author-affiliation"
version = "0.1.0"
description = "Multi-agent system using Pydantic AI to parse arXiv papers and extract author/affiliation data"
readme = "README.md"
authors = [
    { name = "Alberto Camara", email = "camara@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "logfire>=4.15.1",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.22.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
]

[project.scripts]
arxiv-parser = "arxiv_author_affiliation.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-sugar>=1.1.1",
]
